// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Race : Dashboard : Percentage Overview renders correctly 1`] = `
<div
  className="race-class"
>
  <h3
    className="title"
  >
    Race
     completeness for 
    New Mexico
    :
  </h3>
  <div
    className="data"
  >
    <div
      className="dataItem"
    >
      <p>
        <span
          className="percent"
        >
          78
          %
        </span>
         
        <span
          className="a11y-only"
        >
          of
        </span>
         
        <span
          className="percentCaption"
        >
          Cases have no 
          race
           data
        </span>
      </p>
    </div>
    <div
      className="dataItem"
    >
      <p>
        <span
          className="percent"
        >
          96
          %
        </span>
         
        <span
          className="a11y-only"
        >
          of
        </span>
         
        <span
          className="percentCaption"
        >
          Deaths have no 
          race
           data
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`Components : Race : Dashboard : Percentage Overview renders correctly 2`] = `null`;

exports[`Components : Race : Dashboard : Percentage Overview renders correctly 3`] = `
<div
  className="race-class"
>
  <h3
    className="title"
  >
    Race
     completeness for 
    New Mexico
    :
  </h3>
  <div
    className="data"
  >
    <div
      className="dataItem"
    >
      <p>
        <span
          className="percent"
        >
          78
          %
        </span>
         
        <span
          className="a11y-only"
        >
          of
        </span>
         
        <span
          className="percentCaption"
        >
          Cases have no 
          race
           data
        </span>
      </p>
    </div>
    <div
      className="dataItem"
    >
      <p>
        <span
          className="percent"
        >
          <img
            alt="Alert icon"
            src="test-file-stub"
          />
        </span>
         
        <span
          className="a11y-only"
        >
          of
        </span>
         
        <span
          className="percentCaption"
        >
          Deaths have no 
          race
           data
        </span>
      </p>
    </div>
  </div>
</div>
`;
